<resources>
    <string name="app_name">MusicPlaylist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_title_text">Felony</string>
    <string name="song_artist_text">CKay</string>
    <string name="delete_song_content_description">Delete a song from the list</string>
    <string name="song_menu">Song</string>
    <string name="playlist_menu">Playlist</string>
    <string name="playlist_folder_description">playlist folder image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="added_on_date">Added on Date</string>
    <string name="swipe_left_right_to_delete">Swipe Left/Right to Delete</string>
    <string name="create_new_playlist_button">create new playlist button</string>
    <string name="please_enter_playlist_title">Please enter playlist title</string>
    <string name="cancel">Cancel</string>
    <string name="added_on">Added on</string>
    <string name="save">save</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="playlist_icon">playlist icon</string>
    <string name="playlist_must_have_name">Playlist must have a name</string>
    <string name="add_song">Add Song</string>
    <string name="add_songs">Add Songs</string>
    <string name="add_song_label">Add Song</string>
    <string name="songs_label">Songs</string>
    <string name="playlist_label">Playlist</string>
    <string name="playlist_songs_label">Playlist Songs</string>
    <string name="search_songs_or_artist">Search songs or artists</string>
    <string name="search_result_icon">Search result icon</string>
    <string name="love_nwantiti">Love Nwantiti</string>
    <string name="search">Search</string>

</resources>