<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/background_purple"
    android:id="@+id/playlist_card"
    android:theme="@style/Theme.MaterialComponents"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playlist_card_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:paddingTop="5dp"
        >

        <ImageView
            android:id="@+id/playlist_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/playlist_image_bg"
            android:padding="5dp"
            android:src="@drawable/ic_playlist"
            android:contentDescription="@string/playlist_folder_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playlist_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/playlist_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/added_on_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/added_on_date"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/playlist_iv"
            app:layout_constraintTop_toBottomOf="@+id/playlist_name_tv" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/dim_purple"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>